Fixed overflow with small screens in studio project page due to images card

--- a/app/_styles/base/_responsive.scss
+++ b/app/_styles/base/_responsive.scss
@@ -74,6 +74,11 @@
     max-width: 550px;
   }
 
+  .element-card-image{
+    max-width: 100%;
+    height: auto;
+  }
+
   .component-services-item-image{
     box-shadow: none;
   }
